test/exceptions/rethrow-to-wrong-block.txt
;;; TOOL: wast2wasm
;;; FLAGS: --enable-exceptions -v
;;; ERROR: 1
(module
  (func (result i32)
    (block $b (result i32)
      (try $try1 (result i32)
        (i32.const 7)
        (catch_all
          (rethrow $b)
        )
      )
    )
  )
) 
(;; STDERR ;;;
out/test/exceptions/rethrow-to-wrong-block.txt:10:12: error: invalid rethrow depth: 1 (catches: 0)
          (rethrow $b)
           ^^^^^^^
;;; STDERR ;;)
